--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 5%;
-  /* gap: 15rem; */
+  margin: 15px 5%;
+  position: relative;
 }
 
 .hero-texts {
@@ -18,4 +18,18 @@
   font-size: 1.33rem;
   font-weight: 400;
   line-height: 34.2px;
+}
+
+.control {
+  position: absolute;
+  margin-top: 20px;
+  /* top: 50px; */
+  left: 0;
+  background: var(--light-gray, #f3f3fa);
+  border-radius: 4px;
+  width: 737px;
+  height: 104px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
