--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,7 +98,11 @@ select {
   background-position: right 15px center;
 }
 
-
+.s{
+  color : #eaf1f9c3;
+  background-color: rgb(12, 11, 11);
+  color: rgba(0, 0, 0, 0.397);
+}
 a {
   color: inherit;
   text-decoration: none;
